# macless-haystack

./: APPLICATION_DESCRIPTION.md  DATAFLOW.md  PRIVACY_ANALYSIS_LINDDUN.md  PRIVACY_ISSUES_SUMMARY.md  PRIVACY_README.md  PRIVACY_THREAT_VISUALIZATION.md  README.md  mh_encryption.py  test_security.py
endpoint/: mh_config.py  mh_endpoint.py  reproduce_issue.py
endpoint/data/: config.ini
firmware/: app_info_1.txt
firmware/ESP32/: CMakeLists.txt  F23C66_keyfile  IVCJHM.keys  IVCJHM_keyfile  README.md  TNI4NS_keyfile  platformio.ini  sdkconfig  sdkconfig.old
firmware/ESP32/main/: CMakeLists.txt  main.c  openhaystack.h  openhaystack_main.c
firmware/ESP32/test/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
firmware/ESP32/test/main/: CMakeLists.txt  main.c
firmware/ESP32/test/main/mocks/: mock_esp_gap_ble_api.c  mock_esp_gap_ble_api.h
firmware/ESP32/test/main/shims/: esp_bt_teardown_test_shim.c  esp_gap_ble_register_cb_test_shim.c  esp_gap_ble_set_rand_addr_test_shim.c  esp_gap_ble_test_shim.c  esp_sleep_test_shim.c
macless_haystack/: pubspec.yaml
macless_haystack/lib/accessory/: accessory_dto.dart  accessory_list_item.dart  accessory_model.dart  accessory_registry.dart
macless_haystack/lib/findMy/: find_my_controller.dart
macless_haystack/lib/history/: location_popup.dart
macless_haystack/lib/item_management/: item_file_import.dart
macless_haystack/test/: perf_test.dart  rolling_keys_test.dart
